[package]
name = "higan-rust"
version = "0.1.0"
authors = ["Mikhail Hogrefe <mikhailhogrefe@gmail.com>"]

[lib]
name = "higan_rust"
path = "src/lib.rs"

[[bin]]
name = "higan-rust_main"
path = "src/bin.rs"

[dependencies]
fixed-width = { path = "../../fixed-width" }
malachite-base = { path = "../../malachite/malachite-base" }
rand = "0.3.0"

[profile.release]
lto = true
